force-app/main/default/objects/ffr__ReportingExecution__c/ffr__ReportingExecution__c.object-meta.xml
<CustomObject>
    <label>Reporting Execution</label>
    <nameField>
        <label>Reporting Execution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reporting Executions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>