force-app/main/default/objects/ffr__ReportingExecution__c/fields/ffr__AsyncJobIds__c.field-meta.xml
<CustomField>
    <fullName>ffr__AsyncJobIds__c</fullName>
    <label>Asynchronous Job IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>