force-app/main/default/objects/ffr__ReportingExecution__c/fields/ffr__CancelValue__c.field-meta.xml
<CustomField>
    <fullName>ffr__CancelValue__c</fullName>
    <label>Cancel Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>