force-app/main/default/objects/ffr__ReportingExecution__c/fields/ffr__FileName__c.field-meta.xml
<CustomField>
    <fullName>ffr__FileName__c</fullName>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>