force-app/main/default/objects/ffr__ReportingExecution__c/fields/ffr__RenderAs__c.field-meta.xml
<CustomField>
    <fullName>ffr__RenderAs__c</fullName>
    <label>Render As</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HTML</fullName>
            </value>
            <value>
                <fullName>PDF</fullName>
            </value>
            <value>
                <fullName>XLS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>