force-app/main/default/objects/ffr__ReportingExecution__c/fields/ffr__ReportingLog__c.field-meta.xml
<CustomField>
    <fullName>ffr__ReportingLog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporting Log</label>
    <referenceTo>ffr__ReportingLog__c</referenceTo>
    <relationshipLabel>Executions</relationshipLabel>
    <relationshipName>Executions</relationshipName>
    <type>Lookup</type>
</CustomField>