force-app/main/default/objects/ffr__ReportingExecution__c/fields/ffr__ReportStatus__c.field-meta.xml
<CustomField>
    <fullName>ffr__ReportStatus__c</fullName>
    <label>Report Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Creating Layout</fullName>
            </value>
            <value>
                <fullName>Getting Data</fullName>
            </value>
            <value>
                <fullName>Waiting for Data and Layout Process</fullName>
            </value>
            <value>
                <fullName>Launching Assembling Data and Layout Process</fullName>
            </value>
            <value>
                <fullName>Waiting for Assembling Data Process</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>