force-app/main/default/objects/ffr__ReportingExecution__c/fields/ffr__SaveToFile__c.field-meta.xml
<CustomField>
    <fullName>ffr__SaveToFile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Save To File</label>
    <type>Checkbox</type>
</CustomField>